syntax = "proto3";

package empmgmt;

option go_package = "grpc_practice.com/exercise";

service EmployeeDatabaseCrud {
    rpc CreateEmployee(NewEmp) returns (Emp) {} 
    rpc GetEmployees(Request) returns (Emps){} 
    rpc UpdateEmployee(Emp) returns (Emp) {} 
    rpc DeleteEmployee(Emp) returns (Response){} 
}

//Response data
message Response {
    string response = 1;
}

//Requested data
message Request {
    string request = 1;
}

message Emps{
    repeated Emp emps=1;
}

//Create New Employee
message NewEmp {
    string name = 1;
    int32 manager_id = 2;
    int32 department_id = 3;
}

//Get the Employee Details
message Emp{
    int32 id = 1;
    string name = 2;
    int32 manager_id = 3;
    int32 department_id = 4;
}