syntax = "proto3";

package empmgmt;

option go_package = "grpc_practice.com/exercise";

service EmployeeDatabaseCrud {
    rpc CreateEmp(NewEmp) returns (Emp) {} 
    rpc ReadEmp(Request) returns (Emps){} 
    rpc UpdateEmp(Emp) returns (Emp) {} 
    rpc DeleteEmp(Emp) returns (Response){} 
}

message Response {

}

message Request {

}

message Emps{
    repeated Emp emps=1;
}

message NewEmp {
    int32 id = 1;
    string name = 2;
    int32 manager_id = 3;
    int32 department_id = 4;
}

message Emp{
    int32 id = 1;
    string name = 2;
    int32 manager_id = 3;
    int32 department_id = 4;
}